# satisfactory_solver

./: Cargo.toml  README.md
.github/workflows/: deploy_gh_page.yml
frontend/: Cargo.toml  build.rs  index.html
frontend/locales/: en.json
frontend/src/: buildings.rs  item.rs  layout.rs  lib.rs  main.rs  miner.rs  parser.rs  recipes.rs  utils.rs
frontend/src/graph_renderer/: component.rs  mod.rs  sort_nodes.rs
frontend/style/: style.css
graph/: Cargo.toml
graph/src/: lib.rs
solver/: Cargo.toml
solver/src/: error.rs  graph.rs  lib.rs  quantity.rs  recipe.rs  solution.rs  solver.rs
