[workspace]
resolver = "2"
members = ["frontend", "solver"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]

# -- members --
solver = { path = "./solver" }

# -- deps --
good_lp = { version = "=1.14", default-features = false }
float_eq = { version = "1.0.1" }
thiserror = { version = "2.0" }
leptos = { version = "0.8" }
web-sys = { version = "0.3", features = [
    "SvgsvgElement",
    "DomRect",
    "Element",
] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
console_error_panic_hook = { version = "0.1" }
thaw = { version = "0.5.0-beta" }
yoke = { version = "0.8" }
icondata = { version = "0.7" }
fixed = { version = "1.31" }
leptos-use = { version = "0.18" }
leptos_i18n = { version = "0.6" }
leptos_i18n_build = { version = "0.6" }
