[package]
name = "graph"
version = { workspace = true }
edition = "2024"
authors = ["Baptiste de Montangon"]
license = "MIT"
description = "Satisfactory recipe solver"
readme = "../README.md"

[dependencies]
solver = { workspace = true }
good_lp = { workspace = true }
float_eq = { workspace = true }
